# obs-studio

./: .cirrus.yml  formatcode.sh
cmake/Modules/: FindOSS.cmake
libobs/: obs-nix.c
plugins/: CMakeLists.txt
plugins/linux-jack/: jack-input.c  jack-wrapper.c
plugins/linux-v4l2/: v4l2-output.c
plugins/obs-outputs/librtmp/: rtmp.c
plugins/oss-audio/: CMakeLists.txt  oss-input.c
plugins/vlc-video/: vlc-video-source.c
